<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7px"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvIdCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10px"
                android:layout_marginBottom="10px"
                android:text="@string/idCard"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etIdCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enterId"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10px"
                android:layout_marginBottom="10px"
                android:text="@string/personalData"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text" />

            <EditText
                android:id="@+id/etSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvCycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10px"
                android:layout_marginBottom="10px"
                android:text="@string/cycle"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spCycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvCourse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10px"
                android:layout_marginBottom="10px"
                android:text="@string/course"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rgCourse"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbFirst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/first" />

                <RadioButton
                    android:id="@+id/rbSecond"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/second" />
            </RadioGroup>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10px"
                android:layout_marginBottom="10px"
                android:gravity="center">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/bAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10px"
                        android:layout_weight="1"
                        android:text="@string/add"
                        app:cornerRadius="15px" />

                    <Button
                        android:id="@+id/bRemove"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10px"
                        android:layout_weight="1"
                        android:text="@string/remove"
                        app:cornerRadius="15px" />

                    <Button
                        android:id="@+id/bUpdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10px"
                        android:layout_weight="1"
                        android:text="@string/update"
                        app:cornerRadius="15px" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/bFindId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10px"
                        android:layout_weight="1"
                        android:text="@string/findbyDNI"
                        app:cornerRadius="15px" />

                    <Button
                        android:id="@+id/bFindCycle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10px"
                        android:layout_weight="1"
                        android:text="@string/findbyCycle"
                        app:cornerRadius="15px" />

                    <Button
                        android:id="@+id/bFindCourse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10px"
                        android:layout_weight="1"
                        android:text="@string/findbyCourse"
                        app:cornerRadius="15px" />
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>